update return flow
