# backend/src/main/java/com/wms/dto/request/ReturnedGoodsApprovalRequest.java
@@ -1,0 +1,10 @@
+package com.wms.dto.request;
+
+import lombok.Getter;
+import lombok.Setter;
+
+@Getter
+@Setter
+public class ReturnedGoodsApprovalRequest {
+    private String notes;
+}
